--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ Nesta praia há também o <strong>Morro das Aranhas</strong>, onde é feita uma 
 <div class='clear'></div>
 <div class='sidenote'>
 <h3><center>Dados de Florianópolis:</center></h3>
-<li>Data de fundção: 23 de março de 1673;</li>
-<li>Némero de habitantes: 516.524 habitantes;</li>
+<li>Data de fundação: 23 de março de 1673;</li>
+<li>Número de habitantes: 516.524 habitantes;</li>
 <li>IDH: 0,847;</li>
 <li>Área (km²): 675,4 km²;</li>
 </div>
